<resources>
    <string name="app_name">Wallet32</string>
    <string name="service_name">Wallet Service</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_seed">View Seed</string>
    <string name="action_about">About Wallet32</string>
    <string name="action_export_xpub">Export Account XPUB</string>
    <string name="title_activity_lobby">Wallet32</string>
    <string name="lobby_starting">Wallet32 Starting &#8230;</string>
    <string name="lobby_edit">Edit</string>
    <string name="lobby_edit_name">Edit Wallet Name:</string>
    <string name="lobby_edit_apply">Apply</string>
    <string name="lobby_edit_delete">Delete Wallet</string>
    <string name="lobby_edit_cancel">Cancel</string>
    <string name="lobby_nodelete_last">You can\'t delete the last wallet</string>
    <string name="lobby_confirm_delete">Are you sure you want to delete %1$s?</string>
    <string name="title_activity_create_restore">Create/Restore Wallet</string>
    <string name="create_nowallet">No Wallet Found</string>
    <string name="setup_create">Create New Wallet</string>
    <string name="setup_restore">Restore Wallet</string>
    <string name="setup_pair">Pair with Wallet on Other Device</string>
    <string name="setup_countersigned">Create Countersigned Wallet</string>
    <string name="title_activity_restore_wallet">Restore Wallet</string>
    <string name="restore_seed">Enter Wallet Seed:</string>
    <string name="restore_seed_hint">Hexadecimal Seed</string>
    <string name="restore_mnemonic">Or Enter Wallet Mnemonic:</string>
    <string name="restore_mnemonic_hint"><![CDATA[space separated ordered
\nword list goes
\nhere ...
    ]]></string>
    <string name="restore_numaccounts">Number of accounts to restore:</string>
    <string name="restore_passphrase">Optional BIP0039 Passphrase (leave blank for Wallet32 created wallets):</string>
    <string name="restore_format_label"><![CDATA[
Wallet32 has been tracking the BIP39 and BIP32 standards as they
develop. If you are restoring a wallet that was created with Wallet32
using an earlier format version please select the appropriate choice below:
    ]]></string>
    <string name="restore_format_v0_5">Version 0.5, current wallets</string>
    <string name="restore_format_v0_4">Version 0.4, before ~15-May-2014</string>
    <string name="restore_format_v0_3">Version 0.3, before ~30-Mar-2014</string>
    <string name="restore_format_v0_2">Version 0.2, before ~14-Mar-2014</string>
    <string name="restore_format_v0_1">Version 0.1, before ~19-Jan-2014</string>
    <string name="restore_badhexvalue">Bad hex seed value</string>
    <string name="restore_badhexlength">Bad hex seed length</string>
    <string name="restore_bothbad">Both hex seed and mnemonic specified</string>
    <string name="restore_noseed">Enter hex seed or mnemonic</string>
    <string name="restore_badlength">Mnemonic word list not 12 words</string>
    <string name="restore_badword">%1$s is not in the mnemonic word list</string>
    <string name="restore_badchecksum">Checksum error; corrupted word list</string>
    <string name="restore_badnumaccts">Bad number of accounts value</string>
    <string name="title_activity_pair_wallet">Pair Wallet</string>
    <string name="pair_directions"><![CDATA[
Select Show Pairing Code from the other wallet\'s settings and scan it.
    ]]></string>
    <string name="pair_directions_nfc"><![CDATA[
If both devices are NFC enabled you can touch them together instead to
pair them.
    ]]></string>
    <string name="pair_error_scanfail">Scan of pairing code failed</string>
    <string name="button_scan_pair">Scan Pairing Code</string>
    <string name="pair_wait_setup">Setting up Paired Wallet</string>
    <string name="title_activity_countersigned_wallet">Create Countersigned Wallet</string>
    <string name="countersigned_phone">Phone Number:</string>
    <string name="countersigned_phone_hint">415 555 1212</string>
    <string name="countersigned_email">Email (Optional):</string>
    <string name="countersigned_email_hint">user@domain.com</string>
    <string name="countersigned_wallet_mnemonic">Wallet Mnemonic Phrase</string>
    <string name="countersigned_wallet_mnemonic_hint"><![CDATA[space separated ordered
\nword list goes
\nhere ...
    ]]></string>
    <string name="countersigned_recovery_mnemonic">Recovery Mnemonic Phrase</string>
    <string name="countersigned_recovery_mnemonic_hint"><![CDATA[space separated ordered
\nword list goes
\nhere ...
    ]]></string>
    <string name="title_activity_passcode">Enter Passcode</string>
    <string name="passcode_create">Create Passcode</string>
    <string name="passcode_confirm">Confirm Passcode</string>
    <string name="passcode_enter">Enter Passcode</string>
    <string name="passcode_current">Enter Current Passcode</string>
    <string name="passcode_show">Show Passcode</string>
    <string name="passcode_error_maxlen">Passcode is maximum length</string>
    <string name="passcode_errortitle">Passcode Error</string>
    <string name="passcode_empty">Empty passcodes are not supported</string>
    <string name="passcode_mismatch">Passcodes didn\'t match, try again</string>
    <string name="passcode_invalid">Passcode invalid, try again</string>
    <string name="passcode_waittitle">Please Wait</string>
    <string name="passcode_waitvalidate"><![CDATA[
Your wallet is encrypted with scrypt to keep it safe;
validating your passcode will take a few seconds.\n
    ]]></string>
    <string name="passcode_waitdecrypt"><![CDATA[
Your wallet is encrypted with scrypt to keep it safe;
decrypting it will take a few seconds.\n
    ]]></string>
    <string name="passcode_waitsetup"><![CDATA[
Your wallet is encrypted with scrypt to keep it safe;
setting it up will take a few seconds.\n
    ]]></string>
    <string name="passcode_waitchange"><![CDATA[
Changing the passcode on your wallet; this can take a
few minutes to re-encrypt each of the existing keys.\n
    ]]></string>
    <string name="passcode_submit">Submit</string>
    <string name="passcode_1">1</string>
    <string name="passcode_2">2</string>
    <string name="passcode_3">3</string>
    <string name="passcode_4">4</string>
    <string name="passcode_5">5</string>
    <string name="passcode_6">6</string>
    <string name="passcode_7">7</string>
    <string name="passcode_8">8</string>
    <string name="passcode_9">9</string>
    <string name="passcode_0">0</string>
    <string name="passcode_del">Del</string>
    <string name="passcode_clr">Clr</string>
    <string name="title_activity_view_seed">Wallet Seed</string>
    <string name="seed_directions_label">BACKUP YOUR WALLET!</string>
    <string name="seed_directions"><![CDATA[
\nWallet32 is a BIP-0032 Hierarchical Deterministic wallet and can
be restored from a seed value if you lose your device.  You can
restore the wallet from the format version and either the hex code or
ordered list of words below.\n
\nIt\'s critical to keep these seed values safe from prying eyes!  If
anyone else learns your seed value they can restore your wallet
elsewhere and take your funds! Store your seed backup in multiple
safe places that only you have access to.\n
\nYou can get back to this screen from the menu.
    ]]></string>
    <string name="seed_version_label">Format Version</string>
    <string name="seed_hex_label">Hex Value</string>
    <string name="seed_mnemonic_label">Ordered Word List</string>
    <string name="seed_done">Done</string>
    <string name="title_activity_show_xpub">Account XPUB Code</string>
    <string name="xpub_directions"><![CDATA[
\nYou can use this code to export the public identifiers for this account.
    ]]></string>
    <string name="title_activity_show_pairing">Wallet Pairing Code</string>
    <string name="pairing_directions"><![CDATA[
\nYou can scan this code when you setup Wallet32 on another device.\n
\nIf both devices are NFC enabled you can touch them together instead to pair
the new wallet.\n 
\nBoth wallets will concurrently control the same funds.
    ]]></string>
    <string name="title_activity_rescan">Rescan Blockchain</string>
    <string name="rescan_full">Full Rescan (EXPENSIVE!)</string>
    <string name="rescan_epoch">Rescan from Wallet32 Epoch</string>
    <string name="rescan_directions"><![CDATA[
An epoch rescan starts from the date that Wallet32 first became
available; it\'s almost always what you want.\n
\nFull rescans are much more expensive and should only be used if
you need to scan for transactions somehow created prior to
using Wallet32.
    ]]></string>
    <string name="rescan_rescan">Rescan</string>
    <string name="rescan_cancel">Cancel</string>
    <string name="base_error_ok">OK</string>
    <string name="sync_state_title">Setting Up Wallet</string>
    <string name="sync_title">Sync Progress</string>
    <string name="sync_percent_label">Percent Complete</string>
    <string name="sync_blocks_left_label">Blocks Left</string>
    <string name="sync_scan_date_label">Scan Date</string>
    <string name="sync_scan_cmpl_label">Complete In</string>
    <string name="sync_details_created"><![CDATA[
Syncing with the blockchain for the first time.
This will take a few minutes; subsequent syncs will be much faster.
    ]]></string>
    <string name="sync_details_restore"><![CDATA[
Restoring the wallet by scanning the blockchain for
pre-existing transactions.  This will take a while.
    ]]></string>
    <string name="sync_details_startup"><![CDATA[
Scanning the blockchain for recent transactions.
    ]]></string>
    <string name="sync_details_rescan"><![CDATA[
Performing a rescan of the blockchain; this will
take a while.
    ]]></string>
    <string name="sync_details_rerescan"><![CDATA[
New used chain addresses were discovered in the previous scan.
Rescanning the blockchain again.  It can take a while
to fully recover all of your address activity.
    ]]></string>
    <string name="sync_abort">Abort and Exit</string>
    <string name="title_activity_main">Wallet32</string>
    <string name="balance_header_acct">Account</string>
    <string name="balance_header_fiat">USD</string>
    <string name="button_send">Send Bitcoin</string>
    <string name="button_receive">Receive Bitcoin</string>
    <string name="button_transactions">View Transactions</string>
    <string name="button_sweep">Sweep Private Key</string>
    <string name="button_exit">Exit Application</string>
    <string name="title_activity_view_account">View Account</string>
    <string name="account_name_label">Account:</string>
    <string name="account_name_hint">Account Name</string>
    <string name="account_name_edit">Edit</string>
    <string name="account_name_submit">Submit</string>
    <string name="account_receive_label">Receiving Addresses</string>
    <string name="account_change_label">Change Addresses</string>
    <string name="address_header_path">Path</string>
    <string name="send_from_label">Send From:</string>
    <string name="send_to_label">Send To:</string>
    <string name="send_to_hint">Bitcoin Address</string>
    <string name="send_amount_label">Send Amount:</string>
    <string name="amount_btc_hint">0.0000</string>
    <string name="amount_fiat_hint">0.00</string>
    <string name="send_fee_label">Miner\'s Fee:</string>
    <string name="fee_btc_hint">0.00000</string>
    <string name="fee_fiat_hint">0.000</string>
    <string name="receive_to_label">Receive To:</string>
    <string name="receive_amount_label">Receive Amount: (optional)</string>
    <string name="receive_bitcoin">Receive Bitcoin</string>
    <string name="fiat_label">USD</string>
    <string name="eq_label">=</string>
    <string name="network_status_unknown">Network Status Unknown</string>
    <string name="pref_fiat_rate_source">Fiat Rate Source</string>
    <string name="pref_fiat_rate_sources_default">COINDESKUSD</string>
    <string name="pref_rescan_blockchain">Rescan Blockchain ...</string>
</resources>