<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CreateRestoreActivity"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    >

  <ScrollView
      android:id="@+id/outer_scroll_id"
      style="@style/OuterWidth"
      android:layout_height="fill_parent"
      android:fillViewport="true"
      android:padding="20dp"
      android:clipToPadding="false"
      android:scrollbarStyle="outsideOverlay"
      >

    <LinearLayout
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	>

      <!-- Rigid Spacer -->
      <View
	  android:layout_width="fill_parent"
	  android:layout_height="20dp"
	  />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/create_nowallet"
	  android:textAppearance="@android:style/TextAppearance.Large"
	  />

      <!-- Rigid Spacer -->
      <View
	  android:layout_width="fill_parent"
	  android:layout_height="50dp"
	  />

      <Button
	  android:id="@+id/create"
	  android:layout_width="180dp"
	  android:layout_height="wrap_content"
	  android:text="@string/setup_create"
	  android:onClick="createWallet"
	  />

      <!-- Rigid Spacer -->
      <View
	  android:layout_width="fill_parent"
	  android:layout_height="10dp"
	  />

      <Button
	  android:id="@+id/restore"
	  android:layout_width="180dp"
	  android:layout_height="wrap_content"
	  android:text="@string/setup_restore"
	  android:onClick="restoreWallet"
	  />

      <!-- Rigid Spacer -->
      <View
	  android:layout_width="fill_parent"
	  android:layout_height="10dp"
	  />

      <Button
	  android:id="@+id/pair"
	  android:layout_width="180dp"
	  android:layout_height="wrap_content"
	  android:text="@string/setup_pair"
	  android:onClick="pairWallet"
	  />

      <!-- Rigid Spacer -->
      <View
	  android:id="@+id/countersigned_spacer"
	  android:layout_width="fill_parent"
	  android:layout_height="10dp"
	  />

      <Button
	  android:id="@+id/countersigned"
	  android:layout_width="180dp"
	  android:layout_height="wrap_content"
	  android:text="@string/setup_countersigned"
	  android:onClick="countersignedWallet"
	  />

      <!-- Stretchy Spacer -->
      <View
	  android:layout_width="fill_parent"
	  android:layout_height="0dp"
	  android:layout_weight="1"
	  />

    </LinearLayout>

  </ScrollView>

</LinearLayout>
