<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    >

    <!-- Child layout from bottom to top -->
    <TextView
	android:id="@+id/network_status"
	android:text="@string/network_status_unknown"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_alignParentBottom="true"
	android:layout_centerHorizontal="true" />

    <LinearLayout
	android:id="@+id/main_body"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="center"
        android:layout_above="@id/network_status"
	>

      <GridView
	  android:id="@+id/balances"
	  android:layout_width="wrap_content"
	  android:layout_height="200dp"
	  android:numColumns="3"
	  android:gravity="center"
	  android:stretchMode="columnWidth"
	  android:layout_centerHorizontal="true"
	  />

      <!--
	  android:stretchMode="spacingWidthUniform"
	  android:columnWidth="90dp"
	  android:verticalSpacing="10dp"
	  android:horizontalSpacing="10dp"
      -->

      <!-- Spacer -->
      <View
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
	  android:layout_weight="1"
	  />

      <Button
          android:id="@+id/send"
          android:layout_width="180dp"
          android:layout_height="wrap_content"
          android:text="@string/button_send"
	  android:onClick="sendBitcoin"
	  android:layout_centerHorizontal="true"
	  />

      <Button
          android:id="@+id/receive"
          android:layout_width="180dp"
          android:layout_height="wrap_content"
          android:text="@string/button_receive"
	  android:onClick="receiveBitcoin"
	  android:layout_centerHorizontal="true"
	  />

      <Button
          android:id="@+id/exit"
          android:layout_width="180dp"
          android:layout_height="wrap_content"
          android:text="@string/button_exit"
	  android:onClick="exitApp"
	  android:layout_centerHorizontal="true"
	  />

    </LinearLayout>

</RelativeLayout>
